--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <img src="drag.jpg" alt="Drag Race Slaysian Royale">
         <h2>"Slaysian Royale" Drag Race Spin-Off Announced</h2>
         <em>Posted on March 14, 2025</em>
-        <p>An all-Asian spin-off of Drag Race celebrates Asian drag excellence and premieres this year.</p>
+        <p>World of Wonder has confirmed that Drag Race Philippines will host a new all-star spinoff series, Slaysian Royale, this year. An all-Asian spin-off of Drag Race celebrates Asian drag excellence and premieres this year.</p>
         <a href="https://qnews.com.au/drag-race-philippines-gets-all-star-series-slaysian-royale" class="btn" target="_blank">Read More</a>
       </div>
 
